--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
     "prettier": "2.3.0"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10",
+    "json-to-csv-stream": "^1.1.0",
+    "stream-concat": "^1.0.0"
   }
 }
